# ctf-ratings

./: .gitignore  200.html  404.html  README.md  ctf.json  hoge.json  hoge.py  index.html  makedb.py  pyproject.toml  recalc-perfs.py  script.py
.github/workflows/: build.yml  deploy.yml
.vim/: coc-settings.json
_nuxt/: 00b2286.js  02776e5.js  03605e0.js  03e317e.js  06185c4.js  0687e98.js  07ef94f.js  0ec69f5.js  0fcb832.js  19668c9.js  19ff37d.js  1be976c.js  1f9bede.js  21b9559.js  2642c3c.js  2ba0c18.js  2cee5a8.js  2d76bd7.js  2d7a6c6.js  2dc164e.js  2f516e4.js  3118911.js  31acfb8.js  3affa37.js  3b229ee.js  3be990c.js  3d3586f.js  3ee1092.js  41f5bab.js  42271a3.js  461ea22.js  47cba68.js  48d54c2.js  4ec8d95.js  53e8744.js  54c2694.js  5698904.js  5e165dd.js  6410c8a.js  65bd73e.js  (+64 more)
data/events/: *CTF 2021.json  0CTF-TCTF 2021 Finals.json  0CTF-TCTF 2021 Quals.json  0x41414141 CTF.json  3kCTF 2021.json  ASIS CTF Quals 2021.json  Aero CTF 2021.json  Asian Cyber Security Challenge 2021.json  BCACTF 2.0.json  BSides Noida CTF.json  BSidesSF 2021 CTF.json  Balsn CTF 2021.json  BlueHens CTF 2021.json  COMPFEST CTF 2021.json  CSAW CTF Qualification Round 2021.json  CakeCTF 2021.json  Codefest CTF 2020.json  Crypto CTF 2021.json  DCTF 2021.json  DEF CON CTF Qualifier 2021.json  DUNGEON - BSides Ahmedabad CTF 2021.json  D^3CTF 2021.json  DaVinciCTF 2021.json  DawgCTF 2021.json  (+47 more)
events/: index.html
front/: nuxt.config.js  package.json
lib/: ctfd.py  ctfd_legacy.py  difficulty.py  justctf.py  perf.py  rctf.py  scraper.py  types.py  xctf.py
redirect/: index.html
(+42693 files in other folders)
